force-app/main/default/objects/Employee_Hardware_Inventory__c/Employee_Hardware_Inventory__c.object-meta.xml
<CustomObject>
    <label>Employee Hardware Inventory</label>
    <nameField>
        <label>Employee Hardware Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Hardware Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>