force-app/main/default/objects/Employee_Hardware_Inventory__c/fields/Computer_Storage__c.field-meta.xml
<CustomField>
    <fullName>Computer_Storage__c</fullName>
    <label>Computer Storage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>