force-app/main/default/objects/Employee_Hardware_Inventory__c/fields/Hardware_Label__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Label__c</fullName>
    <label>Hardware Label</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>