force-app/main/default/objects/Employee_Hardware_Inventory__c/fields/Hardware_Name__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Name__c</fullName>
    <label>Hardware Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>