force-app/main/default/objects/Employee_Hardware_Inventory__c/fields/Memory__c.field-meta.xml
<CustomField>
    <fullName>Memory__c</fullName>
    <label>Memory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>