force-app/main/default/objects/Employee_Hardware_Inventory__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <label>Processor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>