force-app/main/default/objects/Employee_Hardware_Inventory__c/fields/Screen_Size_Inches__c.field-meta.xml
<CustomField>
    <fullName>Screen_Size_Inches__c</fullName>
    <label>Screen Size (Inches)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>